@@ -306,47 +306,43 @@ public Object visitMatchCommand(MatchCommand ast, Object o) {
   
   //MatchExpression
 public Object visitMatchExpression(MatchExpression ast, Object o) {
+    
     Frame frame = (Frame) o;
-    List<Integer> jumpToEndAddrs = new ArrayList<>();
-
-    // Evaluar la expresión del match una vez y guardarla en la pila
-    ast.E.visit(this, frame);
+    
     emit(Machine.PUSHop, 0, 0, 1);
     emit(Machine.STOREop, 1, Machine.STr, frame.size);
+    
+    List<Integer> jumpToEndAddrs = new ArrayList<>();
 
     for (CaseExpression c : ast.C) {
-        List<Integer> labelFailJumps = new ArrayList<>();
-
         for (Expression labelExpr : c.cases) {
-            emit(Machine.LOADop, 1, Machine.STr, frame.size);
+            
+            ast.E.visit(this, frame);
             labelExpr.visit(this, frame);
+            
             emit(Machine.CALLop, Machine.SBr, Machine.PBr, Machine.eqDisplacementMatch);
             int jumpIfFalse = nextInstrAddr;
             emit(Machine.JUMPIFop, Machine.falseRep, Machine.CBr, 0);
-            labelFailJumps.add(jumpIfFalse);
-        }
 
-        c.E.visit(this, frame); // Valor que va en la pila si coincide
-
-        int jumpAfterCase = nextInstrAddr;
-        emit(Machine.JUMPop, 0, Machine.CBr, 0);
-        jumpToEndAddrs.add(jumpAfterCase);
-
-        for (int addr : labelFailJumps) {
-            patch(addr, nextInstrAddr);
+            c.E.visit(this, frame);
+            emit(Machine.STOREop, 0, Machine.LBr, frame.size);
+            int jump = nextInstrAddr;
+            emit(Machine.JUMPop, 0, Machine.CBr, 0);
+            jumpToEndAddrs.add(jump);
+            
+            patch(jumpIfFalse, nextInstrAddr);
         }
     }
 
-    // Otherwise
-    if (ast.O != null) {
-        ast.O.visit(this, frame);
-    }
-
+    ast.O.visit(this, frame);
+    emit(Machine.STOREop, 0, Machine.LBr, frame.size);
+        
     for (int addr : jumpToEndAddrs) {
         patch(addr, nextInstrAddr);
     }
-
-    return new Integer(1); // <---------------------------- ESTO ES CLAVE
+        
+    emit(Machine.LOADop, 0, Machine.LBr, frame.size);
+    return Integer.valueOf(1);
 }
 
   
